--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,19 +1,19 @@
 // Body
 $body-bg: #FDFEFF;
-
+@import url('https://fonts.googleapis.com/css2?family=Stylish&display=swap');
 // Typography
-$font-family-sans-serif: 'Fredoka One', cursive;
-$parrafos-font-family: 'Didact Gothic', sans-serif;
-$font-size-base: 0.9rem;
-$line-height-base: 1.6;
+$font-family-sans-serif: 'Stylish', sans-serif;
+$parrafos-font-family: 'Stylish', sans-serif;
+$font-size-base: 1.2rem;
+$line-height-base: 1.5;
 
 // Colors
-$blue: #EB6864;
+$blue: #AC0202;
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66d9b;
-$red: #e3342f;
-$orange: #f6993f;
+$red: #AC0202;
+$orange: #AC0202;
 $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
