--- a/resources/sass/_recetas.scss
+++ b/resources/sass/_recetas.scss
@@ -22,10 +22,10 @@ trix-editor {
     width: 16px;
 }
 .barra {
-    background-color: #ED4646!important
+    background-color: #AC0202!important
 }
 .fecha {
-    color: #ED4646 !important
+    color: #AC0202 !important
 }
 .receta-meta p {
     font-size: 12px;
@@ -48,14 +48,14 @@ trix-editor {
     font-family: 'Cabin', sans-serif;
     color: #333;
     font-size: 1.8rem;
-    border-bottom: 3px solid #ED4646 !important;
+    border-bottom: 3px solid #AC0202 !important;
     display: inline-block;
     padding-bottom: .5rem;
     padding-right: 2rem;
 }
 .btn-receta,
 .btn-receta:hover {
-    background-color: #ED4646 !important;
+    background-color: #AC0202 !important;
     border: none;
 }
 
@@ -99,7 +99,7 @@ trix-editor {
           bottom: 0;
           width: 100%;
           height: 4px;
-          background: #ED4646;
+          background: #AC0202;
           transform:  translateX(-100%);
         }
         &:hover:before {
@@ -114,10 +114,10 @@ trix-editor {
 url('../images/bgimagen.jpg');
     height:30rem;
     background-size: cover;
-    background-position: top center;
+    background-position: center center;
     .texto-buscar {
         p {
-            font-size: 1.4rem;
+            font-size: 2rem;
             color: #FFF;
         }
     }
