--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -37,7 +37,7 @@ li, #trigger2, #trigger {
   top:0;
   list-style-type: none;
   display: inline-block;
-  padding: 13px;
+  padding: 1rem;
   color: #f2f2f2;
   transition: 0.2s;
 }
@@ -48,7 +48,6 @@ ul {
   background: #AC0202;
   display: block;
   width: 100%;
-  height: 3em;
   text-align: right;
   padding-left: 0;
   padding-right: 0;
@@ -113,7 +112,7 @@ a {
 }
 .x1 {
   position: relative;
-  top: -0.8em;
+  
 }
 #src {
   text-decoration: underline;
@@ -131,6 +130,7 @@ a {
 @media (max-width: 627px) {
   #header {
     width: 100%;
+    height: 3.7rem !important;
   }
   #brand {
     position: absolute;
