--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10062,7 +10062,7 @@ trix-editor {
 
 .hero-categorias {
   background-image: url("../images/bgimagen.jpg");
-  height: 30rem;
+  height: 70vh;
   background-size: cover;
   background-position: center center;
 }
