--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -45,7 +45,7 @@ ul {
   margin-top: 0;
   position: absolute;
   top: 0;
-  background: #AC0202;
+  /*background: #AC0202;*/
   display: block;
   width: 100%;
   text-align: right;
