--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10059,13 +10059,14 @@ trix-editor {
 }
 
 .hero-categorias {
-  background-image: url("../images/bgimagen.jpg");
-  height: 30rem;
+  
+  background-image: linear-gradient(90deg, rgba(1,0,14,0.6619690112373074) 0%, rgba(0,0,6,0.6563667703409488) 35%),url('../images/image.jpg');
+  height: 100vh;
   background-size: cover;
   background-position: center center;
 }
 .hero-categorias .texto-buscar p {
-  font-size: 2rem;
+  font-size: 2.3rem;
   color: #FFF;
 }
 
