--- a/resources/sass/_recetas.scss
+++ b/resources/sass/_recetas.scss
@@ -110,7 +110,7 @@ trix-editor {
 }
 
 .hero-categorias {
-    background-image: linear-gradient(to bottom, rgba(70, 70, 70, 0.4), rgba(53, 53, 53, 0.571)),url('../images/bgimagen.jpg');
+    background-image: linear-gradient(to bottom, rgba(12, 12, 12, 0.753), rgba(10, 10, 10, 0.685)),url('../images/image.jpg');
     height:30rem;
     background-size: cover;
     background-position: center center;
